--- a/src/app/pagina/pagina.component.html
+++ b/src/app/pagina/pagina.component.html
@@ -1,31 +1,28 @@
 <div class="row bg1">
     <div class="col-md-6 espacoEsquerdo espacoTopo">
-        <h1 class="fonte1 text-white">Sistema de gestão de estoque fácil e prático!</h1>
-
+        <h1 class="fonte1 text-white"> Sistema de gestão de estoque fácil e prático!</h1>
         <p class="text-white">Emissão de notas fiscais, controle de estoque, gestão financeira. Tudo que sua empresa precisa de forma simplificada e em poucos segundos.</p>
-
         <a href="#comoFunciona"><button class="btn mb-5" >Entenda como funciona</button></a>
-
     </div>
-
     <div class="col-md-6 mb-4">
         <img src=" https://i.imgur.com/bJRVsVR.png" alt="">
-
     </div>
 </div>
 
 <div class="row ">
     <div class="col-md-4">
         <img src="https://i.imgur.com/U89nL39.png" alt="">
-
     </div>
         <div class="col-md-6 espacoEsquerdo espacoTopo mb-5">
-            <h1 id="comoFunciona" class="fonte2" >Acesse acesse através do computador, tablet ou celular.</h1>
+            <h1 id="comoFunciona" class="fonte21" >Acesse acesse através do computador, tablet ou celular.</h1>
             <ul>
-                <li class="li" >Com o nosso sistema é possível:</li>
-                <li>Emitir a nota fiscal, envie para a Sefaz, autorizar e gerar a nota</li>
+                
+                <li class="li fonte5" >Com o nosso sistema é possível:</li>
+                <span class="fonte4 li1">
+                <li>Emitir a nota fiscal, enviar para a Sefaz, autorizar e gerar a nota</li>
                 <li>Controlar as entradas e saídas de mercadorias da sua empresa de forma automatizada, com relatórios e controle de vendas</li>
                 <li>Fazer a comunicação com os periféricos, como leitor de código de barras, balança de checkout, impressora não-fiscal e equipamento SAT.</li>
+            </span>
             </ul>
     </div>
 </div>
@@ -34,12 +31,32 @@
     <div class="col-md-6 espacoTopo espacoEsquerdo">
         <h1 class="fonte3 " >Faça como muitas empresas e comece agora mesmo a utilizar o UniEstoque</h1>
         <a href=""><button class="btn mb-5" >ADQUIRA JÁ</button></a>
-
-
-
     </div>
     <div class="col-md-6 ">
         <img src="https://i.imgur.com/dafbQMx.png" alt="">
+    </div>
+
+
+
+
+
+    
+</div>
+
+
+<div class="d-flex justify-content-center espacoTopo2 center-justified mb-5">
+    <h1 class="fonte21" >Por que usar nossa <br> ferramenta? </h1>
+</div>
+
+<div class="row mb-4">
+    <div class="col-md-6">
+        <img class="displayed" src="https://i.imgur.com/VyLDQmI.png" alt="" width="400">
+
+    </div>
+    <div class="col-md-6 espacoDireito ">
+        <h1 class="fonte5">Soluções para quase todo o ciclo logístico:
+            desde a retirada do estoque à entrega ao cliente.</h1>
+            <p class="fonte4">Aqui todo o processo importa, nos preocupamos com a gestão do estoque e com a qualidade na entrega. Alogística é nossa paixão, entendemos esse ciclo e sabemos como cuidar dele. Foi assim, que unimos vocação e experiência para desenvolver soluções e plataformas que ajudam fornecedores e clientes</p>
 
     </div>
 
