--- a/src/app/pagina/pagina.component.html
+++ b/src/app/pagina/pagina.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-6 espacoEsquerdo espacoTopo">
         <h1 class="fonte1 text-white"> Sistema de gestão de estoque fácil e prático!</h1>
         <p class="text-white">Emissão de notas fiscais, controle de estoque, gestão financeira. Tudo que sua empresa precisa de forma simplificada e em poucos segundos.</p>
-        <a href="#comoFunciona"><button class="btn mb-5" >Entenda como funciona</button></a>
+        <a href="#comoFunciona"><button class="btn btn21 mb-5 " > Entenda como funciona</button></a>
     </div>
     <div class="col-md-6 mb-4">
         <img src=" https://i.imgur.com/bJRVsVR.png" alt="">
@@ -13,6 +13,7 @@
     <div class="col-md-4">
         <img src="https://i.imgur.com/U89nL39.png" alt="">
     </div>
+
         <div class="col-md-6 espacoEsquerdo espacoTopo mb-5">
             <h1 id="comoFunciona" class="fonte21" >Acesse acesse através do computador, tablet ou celular.</h1>
             <ul>
@@ -44,11 +45,12 @@
 </div>
 
 
+
 <div class="d-flex justify-content-center espacoTopo2 center-justified mb-5">
     <h1 class="fonte21" >Por que usar nossa <br> ferramenta? </h1>
 </div>
 
-<div class="row mb-4">
+<div class="row ">
     <div class="col-md-6">
         <img class="displayed" src="https://i.imgur.com/VyLDQmI.png" alt="" width="400">
 
