--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,11 +1,15 @@
 .bg1{
-    background-color: rgb(23, 216, 216);
+    background-color: #0e0e4b;
 }
 
 .font{
     font-weight: bold;
     font-size: 20px;
-    color: rgb(86, 6, 161);
+    color: #ffffff;
+}
+
+.corFonte{
+    color: #ffffff;
 }
 
 .alinhamento-direita {
@@ -17,6 +21,82 @@
     padding-left: 70pt;
 }
 
+
+.efeito:hover{
+    
+    padding-left: 15px;
+    transition: 300ms;
+}
+
+.efeito1:hover{
+    font-size: 30px ;
+    transition: 300ms;
+}
+
+.efeito2:hover{
+    cursor: pointer;
+}
+
+.dive{
+    margin-right: 30px;
+    
+    display: inline;
+    transition: 0.5s;
+    padding: 0 !important;
+
+}
+
+a{
+    text-decoration: none;
+}
+
 .icon{
-    font-size: 20px;
+    font-size: 25px;
+    
+    
+}
+
+.iconEfeito:hover{
+    color: darkviolet;
+
+}
+
+.margemIcon{
+    margin: 0px 15px 0px 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.icone23{
+    display: -ms-flexbox;
+    display: flex;
+    flex: 1 0 0%;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-right: 15px;
+    margin-bottom: 0;
+    margin-left: 15px;
+    
+}
+
+.icone24{
+    border-radius: 20rem;
+    position: relative;
+    word-wrap: break-word;
+}
+
+.icon25{
+    margin-right: 15px;
+    display: inline;
+    transition: 0.5s;
+    padding: 0 !important;
 }
