--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,22 +1,26 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#17D8D8" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,245.3C672,224,768,160,864,133.3C960,107,1056,117,1152,106.7C1248,96,1344,64,1392,48L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0e0e4b" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,245.3C672,224,768,160,864,133.3C960,107,1056,117,1152,106.7C1248,96,1344,64,1392,48L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 
 <div class="row bg1  alinhamento-direita">
     <div class="col-md-3">
         <p class="font">Av Paulista, 325 - Centro</p>
-        <p>(11) 94305-9052</p>
+        <p class="corFonte" >(11) 94305-9052</p>
         
         
 
     </div>
     <div class="col-md-3">
-        <p class="font">Projetos</p>
-        <p>tGarante <br>Rocket</p>
+        <p class="font ">Projetos</p>
+        <a  href="https://rocket-onetomany.netlify.app/#/sobrenos" target="blank" ><p class="efeito efeito2 corFonte" >tGarante</p></a>
+        <a href="https://rocket-onetomany.netlify.app/#/sobrenos" target="blank" ><p class="efeito efeito2 corFonte" > Rocket</p></a>
         
 
     </div>
     <div class="col-md-3">
         <p class="font">Redes Sociais</p>
-        <p><i class="bi bi-github icon"></i> <i class="bi bi-linkedin icon mx-3"></i></p>
+        <div class="dive "><a href="https://github.com/JoseLuisCorreia" target="blank" ><i class="bi bi-github icon corFonte margemIcon iconEfeito "></i></a> 
+            
+            <a href="https://www.linkedin.com/in/joseluiscorreia/" target="blank"><i class="bi bi-linkedin icon corFonte dive iconEfeito"  ></i></a>
+        </div>
 
     </div>
 
