--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,18 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container-fluid">
-      <img class="logo mx-4" src="https://i.imgur.com/4j5RgFQ.png" alt="" width="100">
-      <a class="navbar-brand fonte" href="">QUEM SOMOS</a>
+     <a routerLink='/pagina' ><img class="logo mx-4" src="https://i.imgur.com/7N9xjpJ.png" alt="" width="150"></a> 
+      
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
      
       <div class="collapse navbar-collapse " id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto ">
-          <li class="nav-item">
-            <a class="fonte me-4" href="#">CONTATOS </a>
+          <li>
+            <a class="fonte alinhamento-direita" routerLink='/sobre' >QUEM SOMOS</a>
+
           </li>
           <li class="nav-item">
-            <a class=" fonte" href="#">TRABALHE CONOSCO</a>
+            <a class="fonte alinhamento-direita" href="#">CONTATE-NOS </a>
+          </li>
+          <li class="nav-item">
+            <a class=" fonte alinhamento-direita" href="#">INSTITUCIONAL</a>
           </li>
           <li class="nav-item dropdown">
-            <a class=" dropdown-toggle fonte mx-4" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class=" dropdown-toggle fonte alinhamento-direita" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               NOSSO PRODUTO
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
