Componente formulario criado

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="col-md-3">
         <p class="font ">Projetos</p>
-        <a  href="https://rocket-onetomany.netlify.app/#/sobrenos" target="blank" ><p class="efeito efeito2 corFonte" >tGarante</p></a>
+        <a  href="https://tgarante-jose-af47b3.netlify.app/" target="blank" ><p class="efeito efeito2 corFonte" >tGarante</p></a>
         <a href="https://rocket-onetomany.netlify.app/#/sobrenos" target="blank" ><p class="efeito efeito2 corFonte" > Rocket</p></a>
         
 
