--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,1 +1,24 @@
-<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla illum, nam iure est facere earum sapiente reiciendis eveniet. Architecto excepturi ad harum beatae dignissimos. Fuga ut architecto doloremque reprehenderit voluptatibus!</h1>
+<div class="bg">
+    
+    <p class="icone"> <a routerLink='/pagina'><i class="bi bi-arrow-left-circle text-black"></i></a></p>
+
+    <h1 class="center-justified fonteCor titulo" >Nossa história</h1>
+
+    <div class="fonte fonteCor margens texto margens1">
+        
+           <p class="justificado"> Criada em 2021, a Uniestoque surgiu com o objetivo de facilitar o controle de estoques de pequenas e médias empresas.  Com a dificuldade e limitação do uso desse tipo de sistema, a busca em atender essa demanda torna-se cada vez mais real e necessária. Acessibilidade/Usabilidade no ambiente de produção, praticidade, segurança e agilidade na rotina são algumas das características oferecidas pela empresa, além do destaque pela integração do sistema junto a dispositivos móveis e computadores, facilitando ainda mais o controle de seus produtos instantaneamente. Com isso, elevam-se as projeções para um cenário de maior aderência e expansão de market share. </p>
+ 
+           <p> Composta por 10 desenvolvedores em início de carreira, a empresa se destaca pela comunicação voltada a experiência do cliente, de forma totalmente online, com índices de satisfação sempre monitorados, de forma a crescerem com todos e quaisquer elogios e críticas. O serviço de suporte virtual torna o produto mais acessível, já que o investimento é único e somente o suporte é cobrado mensalmente, com diferentes planos para atender às necessidades de todos os usuários.</p>
+
+           
+             
+           <h3>Missão</h3>
+           <p>Facilitar os processos logísticos das empresas através soluções tecnológicas, oferecendo Softwares de controle de estoque com alto desempenho, facilidade e acessibilidade, para micro a médias empresas.</p>
+
+           <h3>Visão</h3>
+           <p>Ser uma empresa referência em criação de Softwares para controle de estoque.</p>
+
+           <h3>Valores</h3>
+           <p>Integridade; Honestidade; Capacidade para aceitar grandes desafios e conduzi-los até ao final; Assumir plena responsabilidades dos compromissos, resultados e da qualidade do Software; Procurando sempre satisfazer o usuário final.</p>
+        
+    </div>
