--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,4 +1,7 @@
 <div class="bg">
+
+    <p class="icone"> <a routerLink='/pagina'><i class="bi bi-arrow-left-circle text-black"></i></a></p>
+
     <h1 class="center-justified fonteCor titulo" >Sobre nós</h1>
 
     <div class="fonte fonteCor margens texto margens1">
