--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -14,36 +14,19 @@
 
 .alinhamento-direita {
   padding-left: 80px;
-
 }
 
 .espacoEsquerdo{
     padding-left: 70pt;
 }
 
-
 .efeito:hover{
-    
     padding-left: 15px;
-    transition: 300ms;
-}
-
-.efeito1:hover{
-    font-size: 30px ;
     transition: 300ms;
 }
 
 .efeito2:hover{
     cursor: pointer;
-}
-
-.dive{
-    margin-right: 30px;
-    
-    display: inline;
-    transition: 0.5s;
-    padding: 0 !important;
-
 }
 
 a{
@@ -52,51 +35,75 @@ a{
 
 .icon{
     font-size: 25px;
-    
-    
 }
 
 .iconEfeito:hover{
     color: darkviolet;
-
-}
-
-.margemIcon{
-    margin: 0px 15px 0px 0px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-.icone23{
-    display: -ms-flexbox;
-    display: flex;
-    flex: 1 0 0%;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    margin-right: 15px;
-    margin-bottom: 0;
-    margin-left: 15px;
-    
-}
-
-.icone24{
-    border-radius: 20rem;
-    position: relative;
-    word-wrap: break-word;
-}
-
-.icon25{
-    margin-right: 15px;
-    display: inline;
     transition: 0.5s;
-    padding: 0 !important;
+    padding-right: -10px;
+    font-size: 35px; 
 }
+
+.divPrincipal{
+    margin:0;
+    padding:0;
+    border:0;
+}
+
+
+
+
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card-container .card:not(.highlight-card):hover {
+  transform: translateY(-3px);
+  box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+  color: rgb(94, 235, 157);
+}
+
+.card-container .card:not(.highlight-card):hover .material-icons path {
+  fill: rgb(105, 103, 103);
+}
+
+.card {
+  border-radius: 4px;
+  border: 1px solid #0e0e4b;
+  background-color: #0e0e4b;
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+}
+
+
+
+
+.card-container01{
+    display: flex;
+    flex-flow: column;
+}
+
+.card-container01 .card01:not(.highlight-card01):hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+  }
+  
+  .card-container01 .card01:not(.highlight-card01):hover .material-icons path {
+    fill: rgb(105, 103, 103);
+  }
+  
+  .card01 {
+    border-radius: 4px;
+    padding: 10px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+  }
+
