--- a/src/app/pagina/pagina.component.css
+++ b/src/app/pagina/pagina.component.css
@@ -1,6 +1,16 @@
 .bg1{
-    background-color: rgb(23, 216, 216); 
+    background-color: rgb(44, 62, 104); 
 }
+
+.bg2{
+    background-color: #dfdee4;
+}
+
+.margButton{
+    padding-bottom: 30px;
+    
+}
+
 
 li{
     list-style: none;
@@ -8,19 +18,35 @@ li{
 }
 
 
-.bgBorder1{
-    border-top-left-radius: 10%;
-    border-top-right-radius: 10%;
-    background-color: blueviolet;
-}
+
 
 .btn21:hover{
-    background-color: rgb(237, 245, 125);
+    
+    background-color: rgb(72, 212, 67);
 }
 
 .fonte1{
     font-weight: bold;
     font-size: 60px;
+    font-family: monospace;
+}
+
+.fonte5{
+    font-weight: bold;
+    font-size: 30px;
+    font-family: monospace;
+}
+
+.fonte3{
+    font-weight: bold;
+    font-size: 30px;
+    font-family: monospace;
+}
+
+
+.descricoes{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
 }
 
 .fonte2{
@@ -41,7 +67,8 @@ li{
 }
 
 .fonte4{
-    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
     color: dimgray;
 }
 
@@ -50,7 +77,17 @@ li{
 }
 
 .espacoDireito{
+    margin-right: 5%;
+    padding-left: 10%;
+}
+
+.espacoDireito1{
     padding-right: 5%;
+    
+}
+
+.espacoDireito2{
+    margin-right: 5%;
     padding-left: 10%;
 }
 
@@ -70,10 +107,44 @@ li{
     padding-bottom: 40px;
 }
 
+.corPadrao{
+    color: #d8aa14;
+}
+
+.corPadrao1{
+    background-image: linear-gradient(to bottom,#d8aa14, #d87314, #c46004);
+    background-clip: text;
+    -webkit-background-clip: text; 
+    -webkit-text-fill-color: transparent;
+    color: black;
+}
+
+
+/*
+.bg10{
+    background-image: url(https://i.imgur.com/eT7ijGS.png);
+   
+    background-repeat: no-repeat;
+    background-position: -100px;
+    background-position: center;
+    background-size: 60%;
+
+    
+.pad{
+    padding-top: 10pt;
+    padding-bottom: 400pt;
+}
+} */
+
+
+
+
+
 .btn{
-    background-color: rgb(210, 243, 65);
-    color: rgb(86, 6, 161);
+    background-color: #d8aa14;
+    color: rgb(44, 62, 104); 
     font-weight: bold;
+    font-size: 20px;
 }
 .li{
     list-style: none;
@@ -91,6 +162,101 @@ img.displayed {
     text-align: justify;
     text-align-last: center;
 }
+
+.center-justified1 {
+    
+    text-align: center;
+}
+
+
+.bg3{
+    background-color: #dfb32334;
+}
+
+
+
+
+.iconTamanho{
+    font-size: 30px;
+
+}
+
+.fontTamanho{
+    font-size: 20px;
+}
+
+.marg{
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.cards{
+    display: flex;
+    flex-flow: row;
+}
+
+/*
+.borda1{
+    border-top-width: 10px;
+    border-top-color: #d8aa14;
+    
+} */
+
+.cardsJustify{
+    justify-content: center;
+
+}
+
+
+
+.cardBody{
+    background-color: rgb(44, 62, 104); 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .card-container .card:not(.highlight-card):hover {
+    transform: translateY(-6px);
+    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+    color: rgb(94, 235, 157);
+  }
+  
+  .card-container .card:not(.highlight-card):hover .material-icons path {
+    fill: rgb(105, 103, 103);
+  }
+  
+  .card {
+    border-radius: 4px;
+    border: 1px solid #0e0e4b;
+    background-color: rgb(44, 62, 104);
+    border-top-width: 10px;
+    border-top-color: #d8aa14;
+    padding: 16px;
+    display: flex;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+  }
+
 
 
 
