Conf para subir no netlify

--- a/src/app/pagina/pagina.component.html
+++ b/src/app/pagina/pagina.component.html
@@ -1,43 +1,47 @@
 <div class="row bg1 espacoTopo0">
-    <div class="col-md-7 espacoEsquerdo espacoTopo ">
-        <h1 class="fonte1 corPadrao"> Sistema de gestão de estoque fácil e prático!</h1>
-        <p class="text-white descricoes">Emissão de notas fiscais, controle de estoque, gestão financeira. Tudo que sua empresa
-            precisa de forma simplificada e em poucos segundos.</p>
-        <a href="#comoFunciona"><button class="btn btn21 mb-5 btn-outline-light"> Entenda como funciona</button></a>
-    </div>
-    <div class="col-md-5 mb-4">
-        <img src="https://i.imgur.com/cTM9Gpr.png" width="100%" alt="">
-    </div>
+  <div class="col-md-7 espacoEsquerdo espacoTopo ">
+    <h1 class="fonte1 corPadrao"> Sistema de gestão de estoque fácil e prático!</h1>
+    <p class="text-white descricoes">Emissão de notas fiscais, controle de estoque, gestão financeira. Tudo que sua
+      empresa
+      precisa de forma simplificada e em poucos segundos.</p>
+    <a href="#comoFunciona"><button class="btn btn21 mb-5 btn-outline-light"> Entenda como funciona</button></a>
+  </div>
+  <div class="col-md-5 mb-4">
+    <img src="https://i.imgur.com/cTM9Gpr.png" width="100%" alt="">
+  </div>
 </div>
 
 
 
 <div class="bg2 espacoTopo margButton cards cardsJustify card-container ">
 
-    <div class="card borda1  card" style="width: 18rem; ">
-        
-        <div class="card-body cardBody marg ">
-            <p class="center-justified iconTamanho" > <i class="bi bi-card-list   corPadrao"></i></p>
-          <p class="card-text corPadrao fontTamanho center-justified1 ">Chega de usar papel e sistemas engessados, tenha maior controle de tudo.</p>
-        </div>
-      </div>
+  <div class="card borda1  card" style="width: 18rem; ">
 
-      
-    <div class="card borda1 " style="width: 18rem;">
-        
-        <div class="card-body cardBody marg">
-            <p class="center-justified iconTamanho" > <i class="bi bi-cart4 corPadrao"></i></p>
-          <p class="card-text corPadrao fontTamanho center-justified1 ">Entrada e saída registradas em tempo real de forma automatizada.</p>
-        </div>
-      </div>
+    <div class="card-body cardBody marg ">
+      <p class="center-justified iconTamanho"> <i class="bi bi-card-list   corPadrao"></i></p>
+      <p class="card-text corPadrao fontTamanho center-justified1 ">Chega de usar papel e sistemas engessados, tenha
+        maior controle de tudo.</p>
+    </div>
+  </div>
 
-      <div class="card borda1 " style="width: 18rem;">
-        
-        <div class="card-body cardBody marg">
-            <p class="center-justified iconTamanho" > <i class="bi bi-sliders corPadrao"></i></p>
-          <p class="card-text corPadrao fontTamanho center-justified1 ">Comunicação com os periféricos, como leitor de código de barras, balança de checkout.</p>
-        </div>
-      </div>
+
+  <div class="card borda1 " style="width: 18rem;">
+
+    <div class="card-body cardBody marg">
+      <p class="center-justified iconTamanho"> <i class="bi bi-cart4 corPadrao"></i></p>
+      <p class="card-text corPadrao fontTamanho center-justified1 ">Entrada e saída registradas em tempo real de forma
+        automatizada.</p>
+    </div>
+  </div>
+
+  <div class="card borda1 " style="width: 18rem;">
+
+    <div class="card-body cardBody marg">
+      <p class="center-justified iconTamanho"> <i class="bi bi-sliders corPadrao"></i></p>
+      <p class="card-text corPadrao fontTamanho center-justified1 ">Comunicação com os periféricos, como leitor de
+        código de barras, balança de checkout.</p>
+    </div>
+  </div>
 
 
 </div>
@@ -47,34 +51,34 @@
 
 
 <div class="row bg2" id="comoFunciona">
-    <div class="col-md-5 espacoEsquerdo">
-        <img src="https://i.imgur.com/bJRVsVR.png" alt="" width="90%">
-    </div>
+  <div class="col-md-5 espacoEsquerdo">
+    <img src="https://i.imgur.com/bJRVsVR.png" alt="" width="90%">
+  </div>
 
-    <div class="col-md-7 espacoEsquerdo espacoTopo mb-5 espacoDireito1">
-        <h1 class="fonte1 corPadrao ">Acesse através do computador, tablet ou celular.</h1>
-        <ul>
-            <li class="li fonte5">Com o nosso sistema é possível:</li>
-            <span class="fonte4">
-                <li>Emitir a nota fiscal, enviar para a Sefaz, autorizar e gerar a nota;</li>
-                <li>Controlar as entradas e saídas de mercadorias da sua empresa de forma automatizada, com relatórios e
-                    controle de vendas;</li>
-                <li>Fazer a comunicação com os periféricos, como leitor de código de barras, balança de checkout,
-                    impressora não-fiscal e equipamento SAT.</li>
-            </span>
-        </ul>
-    </div>
+  <div class="col-md-7 espacoEsquerdo espacoTopo mb-5 espacoDireito1">
+    <h1 class="fonte1 corPadrao ">Acesse através do computador, tablet ou celular.</h1>
+    <ul>
+      <li class="li fonte5">Com o nosso sistema é possível:</li>
+      <span class="fonte4">
+        <li>Emitir a nota fiscal, enviar para a Sefaz, autorizar e gerar a nota;</li>
+        <li>Controlar as entradas e saídas de mercadorias da sua empresa de forma automatizada, com relatórios e
+          controle de vendas;</li>
+        <li>Fazer a comunicação com os periféricos, como leitor de código de barras, balança de checkout,
+          impressora não-fiscal e equipamento SAT.</li>
+      </span>
+    </ul>
+  </div>
 </div>
 <div class="row bg1 text-white espacoTopo2">
-    <div class="col-md-6 espacoTopo espacoEsquerdo">
-        <h1 class="fonte3 ">Faça como muitas empresas e comece agora mesmo a utilizar o UniEstoque</h1>
-        <a target="blank"
-            href="https://web.whatsapp.com/send?phone=5511943059052&text=Olá tudo bem? Venho através do seu site UniEstoque."><button
-                id="exampleModal" class="btn btn21 btn-outline-light mb-5">ADQUIRA JÁ</button></a>
-    </div>
-    <div class="col-md-6 ">
-        <img src="https://i.imgur.com/dafbQMx.png" alt="">
-    </div>
+  <div class="col-md-6 espacoTopo espacoEsquerdo">
+    <h1 class="fonte3 ">Faça como muitas empresas e comece agora mesmo a utilizar o UniEstoque</h1>
+    <a target="blank"
+      href="https://web.whatsapp.com/send?phone=5511943059052&text=Olá tudo bem? Venho através do seu site UniEstoque."><button
+        id="exampleModal" class="btn btn21 btn-outline-light mb-5">ADQUIRA JÁ</button></a>
+  </div>
+  <div class="col-md-6 ">
+    <img src="https://i.imgur.com/dafbQMx.png" alt="">
+  </div>
 </div>
 
 
@@ -83,70 +87,83 @@
 
 
 <div class="row bg10 ">
-    <div class="  pad center-justified">
-<div class="row" id="estouComDuvida">
+  <div class="  pad center-justified">
+    <div class="row" id="estouComDuvida">
 
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-        <h1 class="navbar-nav  d-flex  fonte1 corPadrao align-items-center ">Por que usar nossa <span class="azulPadrao"> ferramenta?
-            </span> <span><i class="bi bi-dash-lg traco"></i></span> </h1>
-    </div>
-    <div class="col-md-2"></div>
-    <div class="row ">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h1 class="navbar-nav  d-flex  fonte1 corPadrao align-items-center ">Por que usar nossa <span
+            class="azulPadrao"> ferramenta?
+          </span> <span><i class="bi bi-dash-lg traco"></i></span> </h1>
+      </div>
+      <div class="col-md-2"></div>
+      <div class="row ">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <div class="accordion accordion-flush acordion1 espacoEsquerdo" id="accordionFlushExample">
-                <div class="accordion-item mb-2 ">
-                  <h2 class="accordion-header " id="flush-headingOne">
-                    <button class="accordion-button collapsed fonte4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                      O que oferecemos
-                    </button>
-                  </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body fonte4">Soluções para quase todo o ciclo logístico, desde a retirada do estoque à entrega ao cliente.
+          <div class="accordion accordion-flush acordion1 espacoEsquerdo" id="accordionFlushExample">
+            <div class="accordion-item mb-2 ">
+              <h2 class="accordion-header " id="flush-headingOne">
+                <button class="accordion-button collapsed fonte4" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  O que oferecemos
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body fonte4">Soluções para quase todo o ciclo logístico, desde a retirada do
+                  estoque à entrega ao cliente.
 
-                    </div>
-                  </div>
                 </div>
-                <div class="accordion-item mb-2">
-                  <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed fonte4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                      Processos
-                    </button>
-                  </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body fonte4">Aqui todo o processo importa, nos preocupamos com a gestão do estoque e com a qualidade na entrega.</div>
-                  </div>
-                </div>
-
-
-                <div class="accordion-item mb-2">
-                    <h2 class="accordion-header" id="flush-headingFoor">
-                      <button class="accordion-button collapsed fonte4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFoor" aria-expanded="false" aria-controls="flush-collapseFoor">
-                        O que é a logística para a gente
-                      </button>
-                    </h2>
-                    <div id="flush-collapseFoor" class="accordion-collapse collapse" aria-labelledby="flush-headingFoor" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body fonte4">A logística é nossa paixão, entendemos esse ciclo e sabemos como cuidar dele.</div>
-                    </div>
-                  </div>
-
-
-                  <div class="accordion-item mb-2">
-                    <h2 class="accordion-header" id="flush-headingFive">
-                      <button class="accordion-button collapsed fonte4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                        Juntando as forças
-                      </button>
-                    </h2>
-                    <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body fonte4">Unimos vocação e experiência para desenvolver soluções e plataformas que ajudam fornecedores e clientes</div>
-                    </div>
-                  </div>               
               </div>
+            </div>
+            <div class="accordion-item mb-2">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed fonte4" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  Processos
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body fonte4">Aqui todo o processo importa, nos preocupamos com a gestão do estoque
+                  e com a qualidade na entrega.</div>
+              </div>
+            </div>
+
+
+            <div class="accordion-item mb-2">
+              <h2 class="accordion-header" id="flush-headingFoor">
+                <button class="accordion-button collapsed fonte4" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseFoor" aria-expanded="false" aria-controls="flush-collapseFoor">
+                  O que é a logística para a gente
+                </button>
+              </h2>
+              <div id="flush-collapseFoor" class="accordion-collapse collapse" aria-labelledby="flush-headingFoor"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body fonte4">A logística é nossa paixão, entendemos esse ciclo e sabemos como
+                  cuidar dele.</div>
+              </div>
+            </div>
+
+
+            <div class="accordion-item mb-2">
+              <h2 class="accordion-header" id="flush-headingFive">
+                <button class="accordion-button collapsed fonte4" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                  Juntando as forças
+                </button>
+              </h2>
+              <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body fonte4">Unimos vocação e experiência para desenvolver soluções e plataformas
+                  que ajudam fornecedores e clientes</div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="col-md-3"></div>
+      </div>
     </div>
-</div>
 
-    </div>
+  </div>
 </div>
