--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,9 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0e0e4b" fill-opacity="1" d="M0,64L288,192L576,160L864,96L1152,224L1440,64L1440,320L1152,320L864,320L576,320L288,320L0,320Z"></path></svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0e0e4b" fill-opacity="1" d="M0,256L1440,0L1440,320L0,320Z"></path></svg>
+
+
+
+
 
 <div class="row bg1  alinhamento-direita divPrincipal">
     <div class="col-md-3">
