--- a/src/app/pagina/pagina.component.html
+++ b/src/app/pagina/pagina.component.html
@@ -39,16 +39,12 @@
     <div class="card-body cardBody marg">
       <p class="center-justified iconTamanho"> <i class="bi bi-sliders corPadrao"></i></p>
       <p class="card-text corPadrao fontTamanho center-justified1 ">Comunicação com os periféricos, como leitor de
-        código de barras, balança de checkout.</p>
+        código de barras, balança de checkout..</p>
     </div>
   </div>
 
 
 </div>
-
-
-
-
 
 <div class="row bg2 " id="comoFunciona">
   <div class="col-md-5 espacoEsquerdo">
