--- a/src/app/pagina/pagina.component.html
+++ b/src/app/pagina/pagina.component.html
@@ -39,7 +39,7 @@
     <div class="card-body cardBody marg">
       <p class="center-justified iconTamanho"> <i class="bi bi-sliders corPadrao"></i></p>
       <p class="card-text corPadrao fontTamanho center-justified1 ">Comunicação com os periféricos, como leitor de
-        código de barras, balança de checkout..</p>
+        código de barras, balança de checkout.</p>
     </div>
   </div>
 
